cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_xml_specifications@valid-annotation-1.5.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-annotation-1.5.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.5" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <components>
    <component type="library" bom-ref="component-a">
      <name>Component A</name>
      <version>1.0.0</version>
    </component>
  </components>
  <annotations>
    <annotation bom-ref="annotation-1">
      <subjects>
        <subject ref="component-a" />
      </subjects>
      <annotator>
        <organization>
          <name>Acme, Inc.</name>
          <url>https://example.com</url>
          <contact>
            <name>Acme Professional Services</name>
            <email>professional.services@example.com</email>
          </contact>
        </organization>
      </annotator>
      <timestamp>2020-04-07T07:01:00Z</timestamp>
      <text>This is a sample annotation made by an organization</text>
    </annotation>
    <annotation bom-ref="annotation-2">
      <subjects>
        <subject ref="component-a" />
      </subjects>
      <annotator>
        <individual>
          <name>Samantha Wright</name>
          <email>samantha.wright@example.com</email>
          <phone>800-555-1212</phone>
        </individual>
      </annotator>
      <timestamp>2020-04-07T07:01:00Z</timestamp>
      <text>This is a sample annotation made by an person</text>
    </annotation>
    <annotation bom-ref="annotation-3">
      <subjects>
        <subject ref="component-a" />
      </subjects>
      <annotator>
        <component type="application">
          <name>Awesome Tool</name>
          <version>9.1.2</version>
        </component>
      </annotator>
      <timestamp>2020-04-07T07:01:00Z</timestamp>
      <text>This is a sample annotation made by a component</text>
    </annotation>
    <annotation bom-ref="annotation-4">
      <subjects>
        <subject ref="component-a" />
      </subjects>
      <annotator>
        <service bom-ref="b2a46a4b-8367-4bae-9820-95557cfe03a8">
          <provider>
            <name>Partner Org</name>
            <url>https://partner.org</url>
            <contact>
              <name>Support</name>
              <email>support@partner</email>
              <phone>800-555-1212</phone>
            </contact>
          </provider>
          <group>org.partner</group>
          <name>BOM Annotation Service</name>
          <version>2020-Q2</version>
          <endpoints>
            <endpoint>https://partner.org/api/v1/inspect</endpoint>
            <endpoint>https://partner.org/api/v1/annotate</endpoint>
          </endpoints>
          <authenticated>true</authenticated>
          <x-trust-boundary>true</x-trust-boundary>
          <data>
            <classification flow="bi-directional">pubic</classification>
          </data>
        </service>
      </annotator>
      <timestamp>2020-04-07T07:01:00Z</timestamp>
      <text>This is a sample annotation made by a service</text>
    </annotation>
  </annotations>
</bom>
